# backend-steik

./: db.sqlite3  manage.py  pyproject.toml
core/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  views.py
core/migrations/: 0001_initial.py  0002_alter_mesa_numero_mesa.py  0002_pessoa_remove_pedido_cliente_funcionario_and_more.py  0002_restaurante_email_restaurante_senha_acesso.py  0003_alter_funcionario_user.py  0003_alter_pedido_pratos.py  0003_categoria.py  0004_alter_caixa_operador.py  0004_alter_pedido_pratos.py  0004_alter_prato_categoria.py  0005_alter_caixa_operador.py  0005_prato_imagem.py  0005_prato_valor.py  0006_alter_caixa_saldo_final_alter_caixa_saldo_inicial.py  0006_alter_prato_valor.py  0007_alter_pedido_status.py  0007_pedido_valor_pago.py  0008_alter_pedido_status.py  0008_alter_pedido_valor_pago.py  0009_pratopedido_alter_pedido_pratos.py  0009_remove_metodopagamento_pedido_pedido_pagamento.py  0010_notificacao.py  0010_remove_pedido_pagamento_pedido_pagamento.py  0011_alter_pedido_pagamento.py  0012_pedido_desconto_pedido_subtotal_pedido_troco.py  0013_sangria.py  0014_delete_sangria.py  0015_acrescimo.py  0016_mesa_ocupada.py  0017_remove_mesa_ocupada_remove_mesa_reservada_and_more.py  0018_pedido_codigo.py  0019_alter_pedido_status.py  0020_prato_alergenicos_prato_calorias_prato_carboidratos_and_more.py  0021_alter_pedido_status.py  0022_pedido_data_pedido.py  0023_authenticationtoken.py  0024_pedido_observacao.py  0025_alter_acrescimo_valor_alter_despesa_valor_and_more.py  (+4 more)
steik/: asgi.py  settings.py  urls.py  wsgi.py
(+1 files in other folders)
